test/must_fail/sub_extra_params.ref
error: Subcircuit x1 uses parameter "zebra" which is not present in model POT2B
  [sub_extra_params.ngjs:0:0] in <anonymous>()
    var t1 = tran().run().chart('V(2)');
                    ^
hint: Similar parameters are: r
hint: All parameters are: percent, r

Stack trace (6 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [device/sub.js:0:0, core.js:0:0] in Sub.render()
    throw new Exception('Subcircuit ' + this.attr.name + ' uses parameter "' + k + '" which is not present in model ' + this.attr.model);
          ^
  [netlist/netlist_render.js:0:0, core.js:0:0] in netlist_render()
    spice = spice.concat(aNetlistDevices[i].render().split('\n'));
                                            ^
  [netlist/netlist_done.js:0:0, core.js:0:0] in netlist_done()
    r.netlist = netlist_render(netlist_devices, netlist_line_markers, true, false);
                ^
  [analysis/tran.js:0:0, core.js:0:0] in Tran.run()
    this.ret = netlist_done();
               ^
  [sub_extra_params.ngjs:0:0] in <anonymous>()
    var t1 = tran().run().chart('V(2)');
                    ^

exit(12)
